chore(javafx): Enhance Card CardPropertiesView