@@ -6,27 +6,35 @@ import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
 import java.util.NoSuchElementException;
+import java.util.Optional;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.Flow;
 
 import io.reactivex.rxjava3.core.Flowable;
 import it.niedermann.nextcloud.deck.domain.model.Card;
+import it.niedermann.nextcloud.deck.domain.model.Comment;
+import it.niedermann.nextcloud.deck.domain.model.User;
 import it.niedermann.nextcloud.deck.domain.repository.CardRepository;
 import jakarta.inject.Inject;
 
 public class CardRepositoryImpl implements CardRepository {
 
     final List<Card> cards = List.of(
-            new Card(0, 0, 0, 0, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #0", "Card-Description 0 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0),
-            new Card(1, 0, 0, 0, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #1", "Card-Description 1 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0),
-            new Card(2, 0, 0, 1, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #2", "Card-Description 2 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0),
-            new Card(3, 0, 0, 1, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #3", "Card-Description 3 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0),
-            new Card(4, 0, 0, 2, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #4", "Card-Description 4 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0),
-            new Card(5, 0, 0, 2, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #5", "Card-Description 5 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0),
-            new Card(6, 0, 0, 3, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #6", "Card-Description 6 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0),
-            new Card(7, 0, 0, 3, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #7", "Card-Description 7 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0),
-            new Card(8, 0, 0, 4, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #8", "Card-Description 8 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0),
-            new Card(9, 0, 0, 4, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #9", "Card-Description 9 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0)
+            new Card(0, 0, 0, 0, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #0", "Card-Description 0 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 3),
+            new Card(1, 0, 0, 0, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #1", "", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0),
+            new Card(2, 0, 0, 1, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #2", "- [ ] Check 1\n- [x] Check 2\n- [ ] Check 3", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 4),
+            new Card(3, 0, 0, 1, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #3", "Card-Description 3 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), List.of(new Comment(
+                    3,
+                    new User("sample", "Sampson Sample"),
+                    LocalDateTime.now(),
+                    "This is a creative comment.",
+                    Optional.empty())), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 6),
+            new Card(4, 0, 0, 2, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #4", "Card-Description 4 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0),
+            new Card(5, 0, 0, 2, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #5", "Card-Description 5 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 1),
+            new Card(6, 0, 0, 3, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #6", "Card-Description 6 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0),
+            new Card(7, 0, 0, 3, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #7", "Card-Description 7 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0),
+            new Card(8, 0, 0, 4, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #8", "Card-Description 8 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 6),
+            new Card(9, 0, 0, 4, LocalDateTime.now(), LocalDateTime.now(), 0, "Card-Title #9", "Card-Description 9 Lorem Ipsum Dolor sit Amet", Collections.emptySet(), Collections.emptySet(), Collections.emptyList(), Collections.emptyList(), null, LocalDateTime.now(), null, null, Collections.emptySet(), false, false, 0, 0)
     );
 
     @Inject
